# RayTrace-miniapp

./: .gitignore  Readme.txt
build2/: CMakeCache.txt
src/: .CMakeLists.txt.swp  .RayTraceStructures.h.swp  CMakeCache.txt  CMakeLists.txt  CreateImage.cpp  CreateImageHelpers.cpp  CreateImageHelpers.h  MPI_functions.h  MPI_helpers.h  Makefile  ProfilerApp.h  RayTrace.cpp  RayTrace.h  RayTraceImage.cpp  RayTraceImageCPU.cpp  RayTraceImageCuda.cu  RayTraceImageHelper.h  RayTraceImageOpenACC.cpp  RayTraceStructures.cpp  RayTraceStructures.h  RayTraceVersion.h  WriteCompilerFeatures.cmake  cmake_install.cmake  interp.cpp  interp.h  interp.hpp  macros.cmake
src/AtomicModel/: interp.cpp  interp.h  interp.hpp
src/common/: RayTraceImageHelper.h
src/include/: CompilerFeatures.h
src/kokkos/: RayTraceImageKokkos.hpp
src/utilities/: MPI_functions.h  RayUtilities.cpp  RayUtilities.h  RayUtilityMacros.h
